--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
   "authors": [
     {
       "name": "Torben Hansen",
-      "email": "derhansen@gmail.com",
-      "homepage": "http://www.derhansen.com",
+      "email": "torben@derhansen.com",
+      "homepage": "https://www.derhansen.com",
       "role": "Developer"
     }
   ],
